.provarCaches/00D5f000005vwGkEAI/objects/rstk__soconpbaud__c.object
<CustomObject>
    <description>soconpbaud__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>TEXT(CreatedDate)  &amp; &apos;(&apos; &amp; CreatedBy.FirstName &amp;&apos; &apos;&amp;  CreatedBy.LastName  &amp; &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbaud_aftamount__c</fullName>
        <inlineHelpText>The new Billing Amount once changed.</inlineHelpText>
        <label>Billing Amount - After</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbaud_aftdays__c</fullName>
        <inlineHelpText>The number of days that a Recurring Charge was billed for after a change in the charge.</inlineHelpText>
        <label>Recurring Charge Days Billed - After</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbaud_aftsalesacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Revenue Account associate with the Recurring Charge after a change.</inlineHelpText>
        <label>Revenue Account – After</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Contract Periodic Billing Change Audits (Revenue Account – After)</relationshipLabel>
        <relationshipName>soconpbauds7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbaud_befamount__c</fullName>
        <inlineHelpText>The Billing Amount prior to a change.</inlineHelpText>
        <label>Billing Amount - Before</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbaud_befdays__c</fullName>
        <inlineHelpText>The number of days that a Recurring Charge was billed for prior to a change in the charge.</inlineHelpText>
        <label>Recurring Charge Days Billed - Before</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbaud_befsalesacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Revenue Account associate with the Recurring Charge prior to a change.</inlineHelpText>
        <label>Revenue Account - Before</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Contract Periodic Billing Change Audits</relationshipLabel>
        <relationshipName>soconpbaud6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbaud_chargetype__c</fullName>
        <inlineHelpText>The type of Contract Charge that has been added, changed or deleted.</inlineHelpText>
        <label>Detail Charge Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbaud_chgcomment__c</fullName>
        <inlineHelpText>User-defined comment up to 100 characters in length.</inlineHelpText>
        <label>Change Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbaud_soconchg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Miscellaneous Charge record associated with this charge that has been modified.</inlineHelpText>
        <label>Miscellaneous Charge</label>
        <referenceTo>rstk__soconchg__c</referenceTo>
        <relationshipLabel>Contract Periodic Billing Change Audits</relationshipLabel>
        <relationshipName>soconpbauds3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbaud_socondev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The applicable Serialized Device associated with the Contract Periodic Billing that has been modified.</inlineHelpText>
        <label>Covered Serialized Device</label>
        <referenceTo>rstk__socondev__c</referenceTo>
        <relationshipLabel>Contract Periodic Billing Change Audits</relationshipLabel>
        <relationshipName>soconpbauds5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbaud_soconpbill__c</fullName>
        <inlineHelpText>The Contract Periodic Billing record that this audit record is associated with.</inlineHelpText>
        <label>Contract Periodic Billing</label>
        <referenceTo>rstk__soconpbill__c</referenceTo>
        <relationshipLabel>Contract Periodic Billing Change Audits</relationshipLabel>
        <relationshipName>soconpbauds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbaud_soconpbrc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Recurring Charge record associated with this charge that has been modified.</inlineHelpText>
        <label>Billing Recurring Charge</label>
        <referenceTo>rstk__soconpbrc__c</referenceTo>
        <relationshipLabel>Contract Periodic Billing Change Audits</relationshipLabel>
        <relationshipName>soconpbauds4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbaud_soprod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Rootstock Product Number for the Contract Charge being added, changed or deleted.</inlineHelpText>
        <label>Billing Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Periodic Billing Change Audits</relationshipLabel>
        <relationshipName>soconpbaud2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpbaud_type__c</fullName>
        <inlineHelpText>Identifies what kind of change was made - Add, Change or Delete.</inlineHelpText>
        <label>Audit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Periodic Billing Change Audit</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Contract_Periodic_Billing_Change_Audits</fullName>
        <columns>NAME</columns>
        <columns>rstk__soconpbaud_soconpbill__c</columns>
        <columns>rstk__soconpbaud_soconchg__c</columns>
        <columns>rstk__soconpbaud_soprod__c</columns>
        <columns>rstk__soconpbaud_soconpbrc__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__formula_extid__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Periodic Billing Change Audits</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Periodic Billing Change Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>